<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home_intro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_home_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_home_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/green"
            android:textSize="@dimen/text_size_large"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/text_home_tagline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_home_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_tagline"
            android:textColor="@color/green"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/image_logo_calendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_logo_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_home_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/padding_large"
        android:background="@drawable/background_home_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_upcoming_payments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_payments"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_medium"
            android:backgroundTint="@color/green"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_medium"
            android:backgroundTint="@color/green"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_upcoming_payments"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_uk_bank_holidays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uk_bank_holidays"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_medium"
            android:backgroundTint="@color/purple"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_shopping_list"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>