<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/layout_bank_holiday_header"
        layout="@layout/item_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_medium_16"
        android:paddingTop="@dimen/padding_extra_small_4"
        android:paddingEnd="@dimen/padding_medium_16"
        android:paddingBottom="@dimen/padding_extra_small_4"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/layout_bank_holiday_header">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_bank_holiday_header_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_bank_holiday_header_day_of_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/text_view_bank_holiday_header_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_bank_holiday_header_bank_holiday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bank_holiday"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/text_view_bank_holiday_header_day_of_week"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
