<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.detail.PaymentDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add_payment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="@dimen/padding_medium"
            app:navigationIcon="@drawable/baseline_close_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_payment_title"
        style="@style/BudgetBuddy.TextInputLayout"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_payment_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/payment_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_payment_amount"
        style="@style/BudgetBuddy.TextInputLayout"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_payment_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_payment_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/payment_amount"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_payment_date"
        style="@style/BudgetBuddy.TextInputLayout"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_payment_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_payment_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/baseline_edit_calendar_24"
            android:focusable="false"
            android:hint="@string/next_payment_date"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_payment_frequency"
        style="@style/BudgetBuddy.DropdownMenu"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_payment_date">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_textview_payment_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_frequency"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>